--- a/LabSes1/Pages/LaborantForm.xaml
+++ b/LabSes1/Pages/LaborantForm.xaml
@@ -16,7 +16,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="1.5*"/>
             <RowDefinition Height="3*"/>
-            <RowDefinition Height="1*"/>
+            <RowDefinition Height="2*"/>
         </Grid.RowDefinitions>
         <Image
             Source="/Images/laborant_1.jpeg"/> 
@@ -59,5 +59,16 @@
                 Background="#498C51"
                 Name="BtnUseAnalyzer"
                 Click="BtnUseAnalyzer_Click"/>
+        <Button Grid.Column="1"
+                Grid.Row="3"
+                Height="35"
+                Width="200"
+                Content="Найти пациента"
+                Style="{StaticResource Btn}"
+                Margin="400 90 0 0"
+                FontSize="20"
+                Background="#498C51"
+                Name="BtnFindPatient"
+                Click="BtnFindPatient_Click"/>
     </Grid>
 </Page>
