--- a/LabSes1/Pages/barcode.xaml
+++ b/LabSes1/Pages/barcode.xaml
@@ -8,22 +8,47 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="barcode">
 
-    <Grid>
+    <Grid x:Name="tuc">
         <Button
             Height="35"
             Width="150"
             Click="BtnGenerateBarCode_Click"
             Content="Сгенерировать штрихкод"
             VerticalAlignment="Top"/>
+        <Button
+            Height="35"
+            Width="150"
+            Name="Print"
+            Click="Print_Click"
+            Content="принт"
+            VerticalAlignment="Top"
+            HorizontalAlignment="Right"/>
         <TextBox Height="25"
                  Width="150"
                  HorizontalAlignment="Left"
                  VerticalAlignment="Top"
                  Name="TbNumber"/>
-        <StackPanel Height="200"
-                    Width="300"
+        <Grid HorizontalAlignment="Center"
+              Height="110"
+              Width="222"
+              x:Name="card">
+            <Border BorderBrush="Black"
+                    Background="Black"/>
+            <Border BorderBrush="Black"
+                    Background="White"
+                    Height="108"
+                    Width="220"/>
+            <StackPanel Height="86"
+                    Width="198"
                     Name="Sp"
                     Orientation="Horizontal"
-                    />
+                    Margin="3 0 0 0">
+            </StackPanel>
+            <StackPanel Height="20"
+                    Width="198"
+                    Name="SpNumbers"
+                    Orientation="Horizontal"
+                    Margin="3 84 20 0"/>
+        </Grid>
     </Grid>
 </Page>
