--- a/LabSes1/Windows/MakeOrderWindow.xaml
+++ b/LabSes1/Windows/MakeOrderWindow.xaml
@@ -12,7 +12,9 @@
             <RowDefinition Height="40"/>
             <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
-        <Button HorizontalAlignment="Right"
+        <Grid MouseDown="Grid_MouseDown"
+              Background="Gray">
+            <Button HorizontalAlignment="Right"
                 VerticalAlignment="Center"
                 Height="30"
                 Width="30"
@@ -21,7 +23,7 @@
                 Name="BtnCloseApp"
                 Click="BtnCloseApp_Click"
                 Style="{StaticResource Btn}"/>
-        <Button HorizontalAlignment="Right"
+            <Button HorizontalAlignment="Right"
                 VerticalAlignment="Center"
                 Height="30"
                 Width="30"
@@ -30,6 +32,7 @@
                 Name="BtnHideApp"
                 Click="BtnHideApp_Click"
                 Style="{StaticResource Btn}"/>
+        </Grid>
         <Frame NavigationUIVisibility="Hidden"
                Name="Frm"
                Grid.Row="1"/>
